Implement upload testing
